fixed nav bar alignment

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -125,6 +125,7 @@
 
 .page {
     color: grey;
+    font-weight: 800;
     margin-right: 20px;
     transition: 0.1s ease-in-out;
 }
